--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Kshitiz's Personal Site</title>
+</head>
+
+<body>
+  <img src="Images\kshitiz1.jpg" alt="kshitiz profile picture" height="200">
+  <h1>Kshitiz Bhargava</h1>
+  <p><em>Student at <strong><a href="https://vtop.vit.ac.in/vtop/open/page">VIT University</a></strong>.</em></p>
+  <p>I am a beginner in Web Development.</p>
+  <hr>
+  <h3>Education</h3>
+  <ul>
+    <li>Play Way School</li>
+    <li>Sri Auriobindo School</li>
+    <li>Nav Jyoti School</li>
+    <li><a href="https://vit.ac.in/#">VIT VELLORE</a></li>
+  </ul>
+  <a href="hobbies.html">My Hobbies</a>
+  <br>
+  <a href="contact.html">Contact Me!</a>
+  <br>
+
+
+</body>
+
 </html>
