--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -7,10 +7,18 @@
 </head>
 
 <body>
-  <img src="Images\kshitiz1.jpg" alt="kshitiz profile picture" height="200">
-  <h1>Kshitiz Bhargava</h1>
-  <p><em>Student at <strong><a href="https://vtop.vit.ac.in/vtop/open/page">VIT University</a></strong>.</em></p>
-  <p>I am a beginner in Web Development.</p>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="Images\kshitiz1.jpg" alt="kshitiz profile picture" height="200"></td>
+      <td>
+        <h1>Kshitiz Bhargava</h1>
+        <p><em>Student at <strong><a href="https://vtop.vit.ac.in/vtop/open/page">VIT University</a></strong>.</em></p>
+        <p>I am a beginner in Web Development.</p>
+      </td>
+    </tr>
+  </table>
+
+
   <hr>
   <h3>Education</h3>
   <ul>
@@ -19,8 +27,60 @@
     <li>Nav Jyoti School</li>
     <li><a href="https://vit.ac.in/#">VIT VELLORE</a></li>
   </ul>
+  <hr>
+  <h3>Work Experience</h3>
+  <table cellspacing="20">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2010-2013</td>
+        <td>Intel Coorp</td>
+      </tr>
+      <tr>
+        <td>2010</td>
+        <td>AMD</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <h3>Skills</h3>
+
+  <table border="1">
+    <tr>
+      <td>
+        <table>
+          <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>C/C++</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table>
+          <tr>
+            <td>Photography</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Web Development</td>
+            <td>⭐⭐</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
+  <hr>
   <a href="hobbies.html">My Hobbies</a>
-  <br>
   <a href="contact.html">Contact Me!</a>
   <br>
 
