--- a/HTML-Personal Site/contact.html
+++ b/HTML-Personal Site/contact.html
@@ -12,7 +12,21 @@
   <p>Email: kshitizbhargava2626@gmail.com</p>
   <p>Twitter: <a href="https://twitter.com/Kshitiz__b">Kshitiz__b</a></p>
   <p>Instagram: <a href="https://www.instagram.com/kshitiz__b/">Kshitiz__b</a></p>
+  <hr>
+  <form action="mailto:kshitizb168@gmail.com" method="post" enctype="text/plain">
+    <label for="">Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label for="">Email:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <label for="">Your Message:</label><br>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+    <!-- <input type="file" name="" value=""><br>
+    <input type="date" name="" value=""><br>
+    <input type="radio" name="" value=""><br>
+    <input type="range" name="" value=""><br> -->
+    <input type="submit" name=""><br>
 
+  </form>
 </body>
 
 </html>
