--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -5,9 +5,16 @@
   <meta charset="utf-8">
   <title>Kshitiz__b</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
+
+  <div class="">
+    <h1>I'm Kshitiz.</h1>
+    <p>a programmer.</p>
+  </div>
+
 
 </body>
 
