--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -5,14 +5,22 @@
   <meta charset="utf-8">
   <title>Kshitiz__b</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="skull_custoji.ico">
 </head>
 
 <body>
 
-  <div class="">
+  <div class="top_container">
     <h1>I'm Kshitiz.</h1>
     <p>a programmer.</p>
+  </div>
+
+  <div class="middle_container">
+
+  </div>
+
+  <div class="bottom_container">
+
   </div>
 
 
