--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -11,8 +11,10 @@
 <body>
 
   <div class="top_container">
+    <img src="images/cloud.png" alt="cloud-img">
     <h1>I'm Kshitiz.</h1>
-    <p>a programmer.</p>
+    <p>a <span class="pro">pro</span>grammer.</p>
+    <img src="images/mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle_container">
