--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -11,9 +11,10 @@
 <body>
 
   <div class="top_container">
-    <img src="images/cloud.png" alt="cloud-img">
+    <img src="images/cloud.png" class="top-cloud" alt="cloud-img">
     <h1>I'm Kshitiz.</h1>
     <p>a <span class="pro">pro</span>grammer.</p>
+    <img src="images/cloud.png" class="bottom-cloud" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
 
