--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -6,6 +6,9 @@
   <title>Kshitiz__b</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="skull_custoji.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,11 +21,45 @@
     <img src="images/mountain.png" alt="mountain-img">
   </div>
 
-  <div class="middle_container">
-
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-photo" src="images\kshitiz1.jpg" alt="profile-photo" height="200" width="200">
+      <h2>Hello.</h2>
+      <p><em>Student at <strong><a href="https://vtop.vit.ac.in/vtop/open/page">VIT University</a></strong>.</em></p>
+      <p>I am a beginner in Web Development.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="skill-1" src="https://media.giphy.com/media/juua9i2c2fA0AIp2iq/giphy.gif" alt="skill-1" height="300">
+        <h3>PROGRAMMING</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skill-2" src="https://media.giphy.com/media/26DoiqmYcxgFICb3G/giphy.gif" alt="skill-2" height="250">
+        <h3>INNOVATION</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="kshitizb168@gmail.com">CONTACT ME</a>
+    </div>
   </div>
 
-  <div class="bottom_container">
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/Kshitiz__b">Twitter</a>
+    <a class="footer-link" href="https://www.instagram.com/kshitiz__b/">Instagram</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p>© Kshitiz Bhargava.</p>
+  </div>
+
 
   </div>
 
