--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -16,7 +16,7 @@
   <div class="top_container">
     <img src="images/cloud.png" class="top-cloud" alt="cloud-img">
     <h1>I'm Kshitiz.</h1>
-    <p>a <span class="pro">pro</span>grammer.</p>
+    <h2>a <span class="pro">pro</span>grammer.</h2>
     <img src="images/cloud.png" class="bottom-cloud" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
@@ -34,29 +34,27 @@
       <div class="skill-row">
         <img class="skill-1" src="https://media.giphy.com/media/juua9i2c2fA0AIp2iq/giphy.gif" alt="skill-1" height="300">
         <h3>PROGRAMMING</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <p>I like to write codes and learn new coding languages.</p>
       </div>
       <div class="skill-row">
-        <img class="skill-2" src="https://media.giphy.com/media/26DoiqmYcxgFICb3G/giphy.gif" alt="skill-2" height="250">
-        <h3>INNOVATION</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <img class="skill-2" src="https://media.giphy.com/media/NfBQ73MtvPJS/giphy.gif" alt="skill-2" height="300">
+        <h3>Volleyball</h3>
+        <p>I like to play Volleyball whenever I can, most of the times even when I have other things to do.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="kshitizb168@gmail.com">CONTACT ME</a>
+      <h3>If you like this website and would like to get in touch with me, you can do so with the links given below.</h3>
     </div>
   </div>
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://linkedin.com/in/kshitiz-bhargava-7476a2196">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/Kshitiz__b">Twitter</a>
     <a class="footer-link" href="https://www.instagram.com/kshitiz__b/">Instagram</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://kshitiz-b.github.io/CV/">Website</a>
     <p>© Kshitiz Bhargava.</p>
   </div>
 
