--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -23,7 +23,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-photo" src="images\kshitiz1.jpg" alt="profile-photo" height="200" width="200">
+      <img class="profile-photo" src="images\kshitiz2-1.jpg" alt="profile-photo">
       <h2>Hello.</h2>
       <p><em>Student at <strong><a href="https://vtop.vit.ac.in/vtop/open/page">VIT University</a></strong>.</em></p>
       <p>I am a beginner in Web Development.</p>
@@ -32,12 +32,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skill-1" src="https://media.giphy.com/media/juua9i2c2fA0AIp2iq/giphy.gif" alt="skill-1" height="300">
+        <img class="skill-1" src="https://media.giphy.com/media/5Lmn42BCOy99RaGRP7/giphy.gif" alt="skill-1">
         <h3>PROGRAMMING</h3>
         <p>I like to write codes and learn new coding languages.</p>
       </div>
       <div class="skill-row">
-        <img class="skill-2" src="https://media.giphy.com/media/NfBQ73MtvPJS/giphy.gif" alt="skill-2" height="300">
+        <img class="skill-2" src="https://media.giphy.com/media/JMdAmgOvSmQqdR8vnU/giphy.gif" alt="skill-2">
         <h3>Volleyball</h3>
         <p>I like to play Volleyball whenever I can, most of the times even when I have other things to do.</p>
       </div>
@@ -56,9 +56,6 @@
     <a class="footer-link" href="https://www.instagram.com/kshitiz__b/">Instagram</a>
     <a class="footer-link" href="https://kshitiz-b.github.io/CV/">Website</a>
     <p>© Kshitiz Bhargava.</p>
-  </div>
-
-
   </div>
 
 
