--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -34,12 +34,12 @@
       <div class="skill-row">
         <img class="skill-1" src="https://media.giphy.com/media/5Lmn42BCOy99RaGRP7/giphy.gif" alt="skill-1">
         <h3>PROGRAMMING</h3>
-        <p>I like to write codes and learn new coding languages.</p>
+        <p class="skill1-description">I like to write codes and learn new coding languages.</p>
       </div>
       <div class="skill-row">
         <img class="skill-2" src="https://media.giphy.com/media/JMdAmgOvSmQqdR8vnU/giphy.gif" alt="skill-2">
         <h3>Volleyball</h3>
-        <p>I like to play Volleyball whenever I can, most of the times even when I have other things to do.</p>
+        <p class="skill2-description">I like to play Volleyball whenever I can, most of the times even when I have other things to do.</p>
       </div>
     </div>
     <hr>
