--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -46,6 +46,8 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you like this website and would like to get in touch with me, you can do so with the links given below.</h3>
+      <p>Just contact me for anything.</p>
+      <button class="button" type="button" name="button">CONTACT ME</button>
     </div>
   </div>
 
@@ -55,7 +57,7 @@
     <a class="footer-link" href="https://twitter.com/Kshitiz__b">Twitter</a>
     <a class="footer-link" href="https://www.instagram.com/kshitiz__b/">Instagram</a>
     <a class="footer-link" href="https://kshitiz-b.github.io/CV/">Website</a>
-    <p>© Kshitiz Bhargava.</p>
+    <p class="copyright">© Kshitiz Bhargava.</p>
   </div>
 
 
