--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -25,8 +25,8 @@
     <div class="profile">
       <img class="profile-photo" src="images\kshitiz2-1.jpg" alt="profile-photo">
       <h2>Hello.</h2>
-      <p><em>Student at <strong><a href="https://vtop.vit.ac.in/vtop/open/page">VIT University</a></strong>.</em></p>
-      <p>I am a beginner in Web Development.</p>
+      <p class="intro"><em>Student at <strong><a href="https://vtop.vit.ac.in/vtop/open/page">VIT University</a></strong>.</em></p>
+      <p class="intro">I am a beginner in Web Development.</p>
     </div>
     <hr>
     <div class="skills">
@@ -53,7 +53,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://linkedin.com/in/kshitiz-bhargava-7476a2196">LinkedIn</a>
+    <a class="footer-link" href="https://linkedin.com/in/kshitiz-bhargava">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/Kshitiz__b">Twitter</a>
     <a class="footer-link" href="https://www.instagram.com/kshitiz__b/">Instagram</a>
     <a class="footer-link" href="https://kshitiz-b.github.io/CV/">Website</a>
