--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -25,7 +25,7 @@
     <div class="profile">
       <img class="profile-photo" src="images\kshitiz2-1.jpg" alt="profile-photo">
       <h2>Hello.</h2>
-      <p class="intro"><em>Student at <strong><a href="https://vtop.vit.ac.in/vtop/open/page">VIT University</a></strong>.</em></p>
+      <p class="intro"><em>Student at <strong>VIT University</strong>.</em></p>
       <p class="intro">I am a beginner in Web Development.</p>
     </div>
     <hr>
@@ -46,8 +46,8 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you like this website and would like to get in touch with me, you can do so with the links given below.</h3>
-      <p>Just contact me for anything.</p>
-      <button class="button" type="button" name="button">CONTACT ME</button>
+      <p class="contact-message">Just contact me for anything.</p>
+      <a class="btn" href="mailto:kshitizb168@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
